[gd_scene load_steps=35 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/game.gd" type="Script" id=2]
[ext_resource path="res://Shaders/outline.tres" type="Shader" id=3]
[ext_resource path="res://Objects/hook_display.tscn" type="PackedScene" id=4]
[ext_resource path="res://WorldEnvironments/world_low_quality.tres" type="Environment" id=5]
[ext_resource path="res://Models/Shop/shop.glb" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 3 )
shader_param/_thickness = 1
shader_param/_detail = 78.507

[sub_resource type="QuadMesh" id=11]
size = Vector2( 2, 2 )

[sub_resource type="OpenSimplexNoise" id=27]
seed = 3
octaves = 6
period = 116.1
persistence = 0.748
lacunarity = 2.66

[sub_resource type="NoiseTexture" id=28]
width = 1000
height = 1000
seamless = true
as_normalmap = true
bump_strength = 14.3
noise = SubResource( 27 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.733333, 0.337255, 0.0470588, 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = SubResource( 28 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=7]

[sub_resource type="OpenSimplexNoise" id=14]
seed = 6
octaves = 9
period = 49.2
persistence = 0.514

[sub_resource type="NoiseTexture" id=15]
width = 240
height = 240
as_normalmap = true
bump_strength = 4.1
noise = SubResource( 14 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
albedo_color = Color( 0.0509804, 0.52549, 0.988235, 0.607843 )
normal_enabled = true
normal_scale = -4.97
normal_texture = SubResource( 15 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 0.986977, 1 )

[sub_resource type="OpenSimplexNoise" id=29]
seed = 2
octaves = 6
persistence = 0.606

[sub_resource type="NoiseTexture" id=30]
seamless = true
as_normalmap = true
bump_strength = 8.6
noise = SubResource( 29 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.00392157, 0.478431, 0.0588235, 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = SubResource( 30 )

[sub_resource type="CubeMesh" id=6]

[sub_resource type="BoxShape" id=8]

[sub_resource type="BoxShape" id=19]
extents = Vector3( 5.91394, 11.9602, 1.47824 )

[sub_resource type="BoxShape" id=20]
extents = Vector3( 0.03105, 8.54774, 4.80693 )

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0.584314, 0.270588, 0.0941176, 1 )

[sub_resource type="CubeMesh" id=18]

[sub_resource type="BoxShape" id=21]

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=23]

[sub_resource type="SpatialMaterial" id=24]
albedo_color = Color( 0.321569, 0.72549, 1, 1 )

[sub_resource type="CapsuleMesh" id=25]
radius = 0.3
mid_height = 0.8

[sub_resource type="BoxShape" id=26]
extents = Vector3( 4.1994, 3.84694, 2.6646 )

[sub_resource type="BoxShape" id=31]
extents = Vector3( 1033.34, 1, 1584.33 )

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.861574, 0.362612, 0.355252, -0.000220691, -0.699553, 0.714581, 0.507633, -0.615743, -0.602636, 0, 105.456, 0 )
shadow_enabled = true
shadow_color = Color( 0.231373, 0, 0, 1 )

[node name="OutlineShader" type="MeshInstance" parent="."]
material_override = SubResource( 10 )
extra_cull_margin = 16384.0
mesh = SubResource( 11 )

[node name="World" type="Spatial" parent="."]

[node name="Platform" type="MeshInstance" parent="World"]
transform = Transform( 22.6014, 0, 0, 0, 4.82977, 0, 0, 0, 13.5218, 0.050209, 0.0248472, -0.00056839 )
material_override = SubResource( 2 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")

[node name="StaticBody" type="StaticBody" parent="World/Platform"]

[node name="CollisionShape" type="CollisionShape" parent="World/Platform/StaticBody"]
shape = SubResource( 7 )

[node name="Water" type="MeshInstance" parent="World"]
transform = Transform( 500, 0, 0, 0, 11.262, 0, 0, 0, 500, 32.6762, -7.17049, -450.071 )
material_override = SubResource( 16 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")

[node name="StaticBody" type="StaticBody" parent="World/Water" groups=["Water"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="World/Water/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.007, 0 )
shape = SubResource( 9 )

[node name="Land" type="MeshInstance" parent="World"]
transform = Transform( 543.065, 0, 0, 0, 3.22174, 0, 0, 0, 174.799, 1.87735, 1.17353, 185.309 )
material_override = SubResource( 5 )
mesh = SubResource( 6 )
skeleton = NodePath("../..")

[node name="StaticBody" type="StaticBody" parent="World/Land"]

[node name="CollisionShape" type="CollisionShape" parent="World/Land/StaticBody"]
shape = SubResource( 8 )

[node name="Shop" type="Spatial" parent="World"]

[node name="shop" parent="World/Shop" instance=ExtResource( 6 )]
transform = Transform( 0.0654379, 0, 0.997857, 0, 1, 0, -0.997857, 0, 0.0654379, 60.7498, 4.40428, 95.0761 )

[node name="StaticBody" type="StaticBody" parent="World/Shop/shop"]

[node name="CollisionShape" type="CollisionShape" parent="World/Shop/shop/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.269577, 0, 4.11072 )
shape = SubResource( 19 )

[node name="CollisionShape2" type="CollisionShape" parent="World/Shop/shop/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.259857, 0, -3.96251 )
shape = SubResource( 19 )

[node name="CollisionShape3" type="CollisionShape" parent="World/Shop/shop/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.60311, 0, 0.367462 )
shape = SubResource( 20 )

[node name="Sign" type="MeshInstance" parent="World/Shop"]
transform = Transform( 6.46691, 0, 0, 0, 4.1516, 0, 0, 0, 0.585755, 49.2834, 8.26087, 85.3081 )
material_override = SubResource( 17 )
mesh = SubResource( 18 )

[node name="Text" type="Label3D" parent="World/Shop/Sign"]
transform = Transform( -2.29875, 0, -2.00963e-07, 0, 5.4693, 0, 8.74228e-08, 0, -1, 0, 0.325241, -1.24571 )
text = "The Shop lol"

[node name="StaticBody" type="StaticBody" parent="World/Shop/Sign"]

[node name="CollisionShape" type="CollisionShape" parent="World/Shop/Sign/StaticBody"]
shape = SubResource( 21 )

[node name="Amogus" type="Spatial" parent="World/Shop"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.201, 5.91617, 98.3922 )

[node name="Body" type="MeshInstance" parent="World/Shop/Amogus"]
transform = Transform( 1, 0, 0, 0, -0.0193022, -0.999814, 0, 0.999814, -0.0193022, 0, 0, 0 )
material_override = SubResource( 22 )
mesh = SubResource( 23 )

[node name="Visor" type="MeshInstance" parent="World/Shop/Amogus"]
transform = Transform( -0.000331565, 0, -1, 0, 1, 0, 1, 0, -0.000331565, 0, 0.662062, -0.854836 )
material_override = SubResource( 24 )
mesh = SubResource( 25 )

[node name="Amogus2" type="Spatial" parent="World/Shop"]
transform = Transform( 0.172539, 0, 0, 0, 0.161202, 0, 0, 0, 0.156182, 61.201, 5.91617, 98.3922 )

[node name="Body" type="MeshInstance" parent="World/Shop/Amogus2"]
transform = Transform( 1, 0, 0, 0, -0.0193022, -0.999814, 0, 0.999814, -0.0193022, 0, 0, 0 )
material_override = SubResource( 22 )
mesh = SubResource( 23 )

[node name="Visor" type="MeshInstance" parent="World/Shop/Amogus2"]
transform = Transform( -0.000331565, 0, -1, 0, 1, 0, 1, 0, -0.000331565, 0, 0.662062, -0.854836 )
material_override = SubResource( 24 )
mesh = SubResource( 25 )

[node name="SellZone" type="Area" parent="World/Shop"]

[node name="CollisionShape" type="CollisionShape" parent="World/Shop/SellZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 60.8477, 4.93425, 97.2825 )
shape = SubResource( 26 )

[node name="AmogusSpawn" type="Position3D" parent="World/Shop"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 68.4782, 38.9965, 70.7561 )

[node name="ShopCulling" type="VisibilityNotifier" parent="World/Shop"]

[node name="FishSpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 23.1831, 32.3457 )

[node name="HookDisplay" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -174.764, 0 )

[node name="Amogussy" type="Spatial" parent="."]

[node name="BackroomsWarp" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="BackroomsWarp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90.0272, 0 )
shape = SubResource( 31 )

[node name="FishingLine" type="Line2D" parent="."]
points = PoolVector2Array( 471, 144, 360, 35 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="LineStartPos" type="Position2D" parent="FishingLine"]
position = Vector2( 40, 440 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="LaunchPower" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1177.5
margin_top = -2.5
margin_right = -588.5
margin_bottom = 18.5
rect_scale = Vector2( 4, 4 )
text = "0"
align = 1
valign = 1

[node name="FishCaught" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.5
margin_top = 150.0
margin_right = 84.5
margin_bottom = 170.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Fish Caught: 999"
align = 1
valign = 1

[node name="MoneyCash" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = 181.0
margin_right = 78.0
margin_bottom = 195.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Dosh: 999"
align = 1
valign = 1

[node name="E" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -247.0
margin_right = -60.5
margin_bottom = -233.0
rect_scale = Vector2( 20, 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "E"

[connection signal="body_entered" from="World/Shop/SellZone" to="." method="_on_SellZone_body_entered"]
[connection signal="body_exited" from="World/Shop/SellZone" to="." method="_on_SellZone_body_exited"]
[connection signal="screen_entered" from="World/Shop/ShopCulling" to="." method="_on_ShopCulling_screen_entered"]
[connection signal="screen_exited" from="World/Shop/ShopCulling" to="." method="_on_ShopCulling_screen_exited"]
[connection signal="timeout" from="FishSpawnTimer" to="." method="_on_FishSpawnTimer_timeout"]
[connection signal="body_entered" from="BackroomsWarp" to="." method="_on_BackroomsWarp_body_entered"]
